Eevee Next: Light Path node not working as expected #113922

Closed
opened 2023-10-19 10:22:23 +02:00 by panterita-films · 3 comments

System Information
Operating system: Linux-6.5.5-1-MANJARO-x86_64-with-glibc2.38
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01

Blender Version
Broken: 4.1.0 Alpha, branch: main, commit date: 2023-10-18 20:17, hash: 813f04d704
Worked: Eevee, Cycles

Short description of error
In The Light Path Node "Is Diffuse Ray" and "Is Glossy Ray" are not splitting the rays as expected in Eevee Next whereas it works in Eevee and Cycles. (Note: Works for "Is Camera Ray" in Eevee Next)

Exact steps for others to reproduce the error
In the attached .blend there is a small world setup with the Light Path Node, just switch render engines from Eevee Next to Eevee to see the missing behavior.

Note: I'm not sure if it is a bug, not implemented or a limitation of Eevee Next, so excause this report in case I missed something.
Many Thanks !!

**System Information** Operating system: Linux-6.5.5-1-MANJARO-x86_64-with-glibc2.38 Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01 **Blender Version** Broken: 4.1.0 Alpha, branch: main, commit date: 2023-10-18 20:17, hash: 813f04d70490 Worked: Eevee, Cycles **Short description of error** In The Light Path Node "Is Diffuse Ray" and "Is Glossy Ray" are not splitting the rays as expected in Eevee Next whereas it works in Eevee and Cycles. (Note: Works for "Is Camera Ray" in Eevee Next) **Exact steps for others to reproduce the error** In the attached .blend there is a small world setup with the Light Path Node, just switch render engines from Eevee Next to Eevee to see the missing behavior. Note: I'm not sure if it is a bug, not implemented or a limitation of Eevee Next, so excause this report in case I missed something. Many Thanks !!
panterita-films added this to the 4.1 milestone 2023-10-19 10:22:23 +02:00
panterita-films added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-10-19 10:22:24 +02:00
Iliya Katushenock added the
Interest
EEVEE & Viewport
label 2023-10-19 20:45:44 +02:00
Member
Can confirm. Think this should be supported https://docs.blender.org/manual/en/4.1/render/eevee/materials/nodes_support.html
Clément Foucault changed title from Eevee Next - Light Path node not working as expected to Eevee Next: Light Path node not working as expected 2023-10-23 14:57:36 +02:00

While this is technically incorrect, I still want to support different paths for different light probe types.

  • is_glossy_ray should be true for Plane Light Probe and Sphere Light Probe.
  • is_diffuse_ray should be true for Volume Light Probe.
  • is_shadow_ray should be true for Shadow.
While this is technically incorrect, I still want to support different paths for different light probe types. - `is_glossy_ray` should be true for Plane Light Probe and Sphere Light Probe. - `is_diffuse_ray` should be true for Volume Light Probe. - `is_shadow_ray` should be true for Shadow.

For reference for the person who's gonna implement/fix this, look at the final documentation for what is supposed to work or not.

For reference for the person who's gonna implement/fix this, look at the final documentation for what is supposed to work or not.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-12 21:27:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113922
No description provided.