EEVEE-Next: Add Light Path node support

Fix #113922.

Pull Request: https://projects.blender.org/blender/blender/pulls/116107