source/blender/draw/engines/eevee_next/eevee_pipeline.cc
@@ -1211,6 +1211,9 @@ void DeferredProbeLayer::render(View &view,
                                 Framebuffer &gbuffer_fb,
                                 int2 extent)
 {
+  inst_.pipelines.data.is_probe_reflection = true;
+  inst_.push_uniform_data();
+
   GPU_framebuffer_bind(prepass_fb);
   inst_.manager->submit(prepass_ps_, view);
 
@@ -1227,6 +1230,9 @@ void DeferredProbeLayer::render(View &view,
 
   GPU_framebuffer_bind(combined_fb);
   inst_.manager->submit(eval_light_ps_, view);
+
+  inst_.pipelines.data.is_probe_reflection = false;
+  inst_.push_uniform_data();
 }
 
 /** \} */
@@ -1369,6 +1375,9 @@ void PlanarProbePipeline::render(View &view,
 {
   GPU_debug_group_begin("Planar.Capture");
 
+  inst_.pipelines.data.is_probe_reflection = true;
+  inst_.push_uniform_data();
+
   GPU_framebuffer_bind(gbuffer_fb);
   GPU_framebuffer_clear_depth(gbuffer_fb, 1.0f);
   inst_.manager->submit(prepass_ps_, view);
@@ -1395,6 +1404,9 @@ void PlanarProbePipeline::render(View &view,
 
   GPU_framebuffer_bind(combined_fb);
   inst_.manager->submit(eval_light_ps_, view);
+
+  inst_.pipelines.data.is_probe_reflection = false;
+  inst_.push_uniform_data();
 
   GPU_debug_group_end();
 }
